--- a/index.html
+++ b/index.html
@@ -39,16 +39,9 @@
 </head>
 <body>
 
-<audio id="xiao" src="xiao.mp3" loop preload="auto"></audio>
-
-<script>
-document.addEventListener("click", function () {
-  const music = document.getElementById("xiao");
-  music.play().catch(() => {});
-}, { once: true });
-</script>
-
-
+<audio controls>
+  <source src="xiao.mp3" type="audio/mpeg">
+</audio>
 
 
 <div id="story">
