--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <title>萧逸 · 楼下的夜</title>
     <style>
         body {
-            margin: 0;
-            background-image: url("xiao.jpg");
-            background-size: cover;
-            background-position: center;
-            color: white;
-            font-family: Arial;
-            text-align: center;
-            padding: 80px;
-            background-color: rgba(0,0,0,0.6);
-            background-blend-mode: darken;
-        }
+  margin: 0;
+  height: 100vh;
+  background-image: url("bg.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 
         #story {
             font-size: 24px;
