--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <title>萧逸 · 楼下的夜</title>
     <style>
-        body {
+        html, body {
   margin: 0;
-  height: 100vh;
-  background-image: url("bg.jpg");
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
 }
+
+body {
+  background: url("bg.jpg") no-repeat center center;
+  background-size: cover;
+}
+
 
 
         #story {
