--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <title>萧逸 · 楼下的夜</title>
     <style>
-        html, body {
+html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
 body {
-  background: url("bg.jpg") no-repeat center center;
+  background: url("bg.jpg") no-repeat center center fixed;
   background-size: cover;
 }
+
+#game {
+  position: absolute;
+  bottom: 20%;
+  width: 100%;
+  text-align: center;
+  color: white;
+}
+</style>
+
 
 
 
