--- a/index.html
+++ b/index.html
@@ -1,74 +1,100 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title>萧逸 · 楼下的夜</title>
-    <style>
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  overflow: hidden;
-}
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>萧逸互动剧情</title>
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    overflow: hidden; /* 禁止滚动 */
+  }
 
-body {
-  background: url("bg.jpg") no-repeat center center fixed;
-  background-size: cover;
-}
+  /* 背景层 */
+  #background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("xiao.jpg") no-repeat center center;
+    background-size: cover;
+    z-index: -1; /* 背景在最底下 */
+  }
 
-#game {
-  position: absolute;
-  bottom: 20%;
-  width: 100%;
-  text-align: center;
-  color: white;
-}
+  /* 剧情内容 */
+  #story {
+    position: absolute;
+    top: 15%;
+    width: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: center;
+    z-index: 1;
+  }
+
+  /* 按钮容器 */
+  #choices {
+    position: absolute;
+    bottom: 15%;
+    width: 100%;
+    text-align: center;
+    z-index: 1;
+  }
+
+  button {
+    padding: 10px 20px;
+    margin: 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+
+  button:hover {
+    background-color: rgba(255, 255, 255, 1);
+  }
 </style>
-
-
-
-
-        #story {
-            font-size: 24px;
-            margin-bottom: 30px;
-            line-height: 1.6;
-        }
-
-        button {
-            padding: 12px 25px;
-            margin: 10px;
-            font-size: 18px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            opacity: 0.85;
-        }
-    </style>
 </head>
 <body>
 
-<audio controls>
-  <source src="xiao.mp3" type="audio/mpeg">
-</audio>
+<!-- 背景 -->
+<div id="background"></div>
 
-
+<!-- 剧情文本 -->
 <div id="story">
     争吵之后，你挂断了萧逸的电话。  
     夜晚很安静，你回到家，情绪却还在翻涌。  
     手机突然又响了。
 </div>
 
+<!-- 选择按钮 -->
 <div id="choices">
     <button onclick="answerCall()">接电话</button>
     <button onclick="ignoreCall()">不接</button>
 </div>
 
+<!-- 背景音乐 -->
+<audio id="bgm" src="xiao.mp3" loop preload="auto"></audio>
+
 <script>
+const bgm = document.getElementById("bgm");
+
+// 点击剧情按钮触发音乐
+function playBgm() {
+  if (bgm.paused) {
+    bgm.play().catch(() => {});
+  }
+}
 
 function answerCall() {
+    playBgm();
     document.getElementById("story").innerHTML =
         "听筒那头传来熟悉的声音。<br><br>" +
         "萧逸低声说：'对不起……可以往窗外看看吗？'";
@@ -79,6 +105,7 @@ function answerCall() {
 }
 
 function ignoreCall() {
+    playBgm();
     document.getElementById("story").innerHTML =
         "电话停止了。<br><br>" +
         "你看着黑掉的屏幕，心里更空了一点。";
@@ -131,7 +158,6 @@ function stayHome() {
 function restart() {
     location.reload();
 }
-
 </script>
 
 </body>
