--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     padding: 0;
     height: 100vh;
     overflow: hidden; /* 禁止滚动 */
+    background: none;
   }
 
   /* 背景层 */
@@ -19,12 +20,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("xiao.jpg") no-repeat center center;
+    background-image: url("xiao.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    z-index: -1; /* 背景在最底下 */
+    z-index: -10; /* 背景永远在最下层 */
   }
 
-  /* 剧情内容 */
+  /* 剧情文本 */
   #story {
     position: absolute;
     top: 15%;
@@ -74,7 +77,7 @@
     手机突然又响了。
 </div>
 
-<!-- 选择按钮 -->
+<!-- 按钮选择 -->
 <div id="choices">
     <button onclick="answerCall()">接电话</button>
     <button onclick="ignoreCall()">不接</button>
@@ -86,7 +89,7 @@
 <script>
 const bgm = document.getElementById("bgm");
 
-// 点击剧情按钮触发音乐
+// 第一次点击剧情按钮播放音乐
 function playBgm() {
   if (bgm.paused) {
     bgm.play().catch(() => {});
