--- a/index.html
+++ b/index.html
@@ -30,22 +30,23 @@
   /* 剧情文本 */
 #story {
   position: absolute;
-  top: 15%;
+  top: 25%;                 /* 往下移动，让背景人物露出来 */
   width: 90%;
   left: 50%;
   transform: translateX(-50%);
-  color: white;               /* 主体文字白色 */
-  font-size: 22px;            /* 放大字体 */
-  font-weight: bold;          /* 加粗 */
+  color: white;             
+  font-size: 20px;          /* 稍微小一点，更优雅 */
+  font-weight: bold;        
   line-height: 1.8;
   text-align: center;
   z-index: 1;
   text-shadow: 
-    2px 2px 4px rgba(0,0,0,0.7),   /* 黑色阴影 */
+    2px 2px 4px rgba(0,0,0,0.7),
     -2px -2px 4px rgba(0,0,0,0.7),
     2px -2px 4px rgba(0,0,0,0.7),
     -2px 2px 4px rgba(0,0,0,0.7);
 }
+
 
 
   /* 按钮容器 */
